--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-	
+	<!-- 3D pane where spiroedge is shown off and you can rotate it around and shit -->
+	<div class="pane3D" id="pane3D"></div>
 </body>
 
 </html>
