--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,73 @@
 	<title>Data Visualization</title>
 	
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
+	<style>
+		body {
+			background-color: rgb(59, 66, 82);
+		}
+		
+		.pane3D {
+			width: 900px;
+			height: 350px;
+			background-color: rgb(76, 86, 106);
+			border-radius: 4px;
+			margin-bottom: 4px;
+		}
+
+		.left {
+			width: 100%;
+		}
+
+		.right {
+			width: 900px;
+			float: right;
+		}
+
+		.camera {
+			display: inline-block;
+			width: 48.4%;
+			
+			border-radius: 4px;
+		}
+
+		.camera img {
+			width: 100%;
+			border-radius: 4px;
+		}
+		
+		.thermal {
+			display: inline-block;
+			width: 48.4%;
+			margin-left: 2%;
+		}
+
+		.thermalBlock {
+			display: inline-block;
+			width: 54px;
+			height: 54px;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- 3D pane where spiroedge is shown off and you can rotate it around and shit -->
-	<div class="pane3D" id="pane3D"></div>
+	<div>
+		<div class="left">
+
+		</div>
+
+		<div class="right">
+			<div class="pane3D" id="pane3D"></div>
+			<div class="camera">
+				<img src="./data/images/1547916889354.jpg" />
+			</div>
+
+			<div class="thermal" id="thermalCamera">
+
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
