--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,6 @@
 </head>
 
 <body>
-	<!-- 3D pane where spiroedge is shown off and you can rotate it around and shit -->
 	<div>
 		<div class="left">
 			<div>
@@ -80,7 +79,9 @@
 			</div>
 			<div>
 				<i class="fas fa-fire"></i>
+				
 			</div>
+			<div id="graph"></div>
 			<div>
 				<i class="fas fa-lightbulb"></i>
 			</div>
@@ -102,6 +103,8 @@
 
 			</div>
 		</div>
+
+		
 	</div>
 </body>
 
