--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,11 @@
 		.center>div {
 			margin-top: 50px;
 			margin-bottom: 50px;
+
+			background-image: linear-gradient(#353535, #353535);
+			background-size: 2px 65%;
+			background-repeat: no-repeat;
+			background-position: center 100%;
 		}
 
 		.center>div:first-child {
@@ -219,7 +224,7 @@
 			<div>
 				<div class="camera">
 					<div>
-						<img src="./data/images/1547916889354.jpg" />
+						<img id="image" src="./data/images/1547916889354.jpg" />
 					</div>
 					Webcam Image
 				</div>
